--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:prod}
 
+cors:
+  origins: http://localhost:5173,http://localhost:3000
+
 server:
   servlet:
     context-path: /venda/api
